# muChirality

./: .gitignore  README.md  pyproject.toml
examples/: calculate_displacement.py  chiral_metamaterial.py  chiral_metamaterial1.py  chiral_metamaterial2.py  chiral_metamaterial_paper.py  chiral_metamaterial_save_npy.py  images.py  images_result.py  plot_chiral_metamaterial2.py  plot_cylinder_details.py  plot_square_beam_details.py  plots_paper.py  plots_paper_version1.py  plots_paper_version2.py  plots_paper_version3.py  plots_thesis.py  plotting.py  save_for_paraview.py  save_geometry_as_stl.py  test_bending.py  test_calculate_displacements.py  test_chiral_metamaterial.py  test_chiral_metamaterial2.py  test_chiral_metamaterial2_parallel.py  test_mesh_refinements.py  test_netcdf_write.py  test_npy_write.py  torsion_cylinder.py  torsion_square_beam.py
muChirality/: CalculationsTorsion.py  EigenStrainBending.py  EigenStrainTorsion.py  Geometries.py  Plotting.py  __init__.py
small_example/: README.md  torsion.py  torsion_parallel.py
test/: test_eigenstrain.py
